--- a/1pbb/public/default.html
+++ b/1pbb/public/default.html
@@ -58,14 +58,14 @@
     <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-strap/dist/angular-strap.min.js"></script>  
     <script type="text/javascript" src="bower_components/angular-strap/dist/angular-strap.tpl.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-translate/angular-translate.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-ui-grid/ui-grid.min.js"></script>
     <script type="text/javascript" src="bower_components/ng-dialog/js/ngDialog.min.js"></script>
-
+    <script type="text/javascript" src="bower_components/angular-translate/angular-translate.min.js"></script>
 
     <!-- controller and co -->
     <script type="text/javascript" src="javascripts/opbb-app.js"></script>
     <script type="text/javascript" src="javascripts/opbb-config.js"></script>
+    <script type="text/javascript" src="javascripts/articles/ArticlesCtrl.js"></script>
     <!--script type="text/javascript" src="javascripts/article/ArticlesCtrl.js"></script-->
   </body>
 
