--- a/1pbb/public/javascripts/home/HomePartial.html
+++ b/1pbb/public/javascripts/home/HomePartial.html
@@ -3,23 +3,23 @@
     <h1>Welcome</h1>
     <br>
     <div class="row">
-      <a class="col-md-2" href="default.html#/customers">
+      <a class="col-xs-6 col-md-2" href="default.html#/customers">
         <label>{{'CUSTOMERS' | translate}}</label><br>
         <img src="images/happyCustomer.png" class="img-circle img-lg" />
       </a>
-      <a class="col-md-2" href="default.html#/articles">
+      <a class="col-xs-6 col-md-2" href="default.html#/products">
         <label>{{'ARTICLES' | translate}}</label><br>
         <img src="images/product.png" class="img-circle img-lg"/>
       </a>
-      <a class="col-md-2" href="default.html#/bills">
+      <a class="col-xs-6 col-md-2" href="default.html#/bills">
         <label>{{'BILLS' | translate}}</label><br>
         <img src="images/bill23round.png" class="img-circle img-lg"/>
       </a>
-      <a class="col-md-2" href="default.html#/offers">
+      <a class="col-xs-6 col-md-2" href="default.html#/offers">
         <label>{{'OFFERS' | translate}}</label><br>
         <img src="images/greenPencil.png" class="img-circle img-lg"/>
       </a>
-      <a class="col-md-2" href="default.html#/statistics">
+      <a class="col-xs-6 col-md-2" href="default.html#/statistics">
         <label>{{'STATISTICS' | translate}}</label><br>
         <img src="images/statistics.png" class="img-circle img-lg">
       </a>
