--- a/1pbb/public/javascripts/products/ProductsPartial.html
+++ b/1pbb/public/javascripts/products/ProductsPartial.html
@@ -1,4 +1,4 @@
-<div ng-controller="ArticlesCtrl as vm" ng-init="vm.activate()">
+<div ng-controller="ProductsCtrl as vm" ng-init="vm.activate()">
 
 	<h1>{{ 'ARTICLES' | translate }} </h1>
 
