--- a/1pbb/public/javascripts/home/HomePartial.html
+++ b/1pbb/public/javascripts/home/HomePartial.html
@@ -2,7 +2,7 @@
 
     <h1>Welcome</h1>
     <br>
-    <div class="row">
+    <div class="row centered">
       <a class="col-xs-6 col-md-2" href="default.html#/customers">
         <label>{{'CUSTOMERS' | translate}}</label><br>
         <img src="images/happyCustomer.png" class="img-circle img-lg" />
